--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.6",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/socket.io-client": "^3.0.0",
     "add": "^2.0.6",
+    "antd": "^5.22.2",
     "axios": "^1.6.7",
     "octokit": "^4.0.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.22"
   },
