--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           branch: gh-pages
           publish_dir: ./dist
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          user_name: ${{ secrets.GITHUB_USER }}
-          user_email: ${{ secrets.GITHUB_EMAIL }}
+          github_token: ${{ secrets.DEVOPS_FRONTEND }}
+          user_name: ${{ secrets.MY_USER_NAME }}
+          user_email: ${{ secrets.MY_USER_EMAIL }}
           commit_message: 自动部署
