--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,6 @@ name: Deploy
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
       
 jobs:
   check:
@@ -14,8 +11,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: main
+
   deploy:
     runs-on: ubuntu-latest
+    needs: check
     steps:
       - name: checkout
         uses: actions/checkout@v2
