--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
           
   deploy:
     runs-on: ubuntu-latest
+    needs: check
     steps:
       - name: checkout
         uses: actions/checkout@v2
