--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.6",
@@ -11,7 +12,8 @@
     "add": "^2.0.6",
     "antd": "^5.22.2",
     "axios": "^1.6.7",
-    "octokit": "^4.0.2",
+    "circular-dependency-plugin": "^5.2.2",
+    "qiankun": "^2.10.16",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
@@ -22,20 +24,26 @@
     "yarn": "^1.22.22"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.76",
+    "@types/node": "^16.18.122",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "mini-css-extract-plugin": "^2.9.2",
+    "purgecss-webpack-plugin": "^7.0.2",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5"
+    "source-map-explorer": "^2.5.3",
+    "typescript": "^4.9.5",
+    "webpackbar": "^7.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "build:analyze": "craco build && source-map-explorer 'build/static/js/*.js'",
     "eject": "react-scripts eject"
   },
   "browserslist": {
