--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_branch: main
-          publish_dir: ./dist
+          publish_dir: ./build
           github_token: ${{ secrets.DEVOPS_FRONTEND }}
           commit_message: 自动部署
 
