--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          branch: gh-pages
+          publish_branch: gh-pages
           publish_dir: ./build
           github_token: ${{ secrets.DEVOPS_FRONTEND }}
           commit_message: 自动部署devops
